# bjtuse-wiki

./: README.md  justfile  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  content-bug.yml  content-modify.yml  content-request.yml  enhancement.yml  request-for-comment.yml  添加新页面.md
.github/workflows/: build.yml
docs/: _test.md
docs/_css/: fonts.css  git-commiters.css
docs/css/: diagram.css  fonts.css
docs/css/fonts/: JetBrainsMonoNerdFontMono.css  LXGWBright.css
docs/intro/: faq.md
docs/js/: diagram.js
docs/knowledge/: _index.md  index.md
docs/knowledge/basic/: base.md  bit-byte.md  shell-terminal-path-script.md
docs/tools/: index.md  scoop.md
overrides/partials/: comments.html
