[tool.poetry]
name = "bjtuse-wiki"
version = "0.1.0"
description = ""
authors = ["AzurIce <973562770@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.28"
mkdocs-glightbox = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
